Implement separate auth for user and admin
