# docs/swagger.yaml
@@ -1,4 +1,126 @@
 basePath: /api/v1
+definitions:
+  models.Book:
+    properties:
+      author:
+        type: string
+      cover:
+        type: string
+      created_at:
+        type: string
+      genre:
+        type: string
+      id:
+        type: integer
+      price:
+        type: integer
+      quantity:
+        type: integer
+      title:
+        type: string
+      updated_at:
+        type: string
+      year:
+        type: integer
+    type: object
+  models.CreateBook:
+    properties:
+      author:
+        type: string
+      cover:
+        type: string
+      genre:
+        type: string
+      price:
+        type: integer
+      quantity:
+        type: integer
+      title:
+        type: string
+      year:
+        type: integer
+    required:
+    - author
+    - cover
+    - genre
+    - price
+    - quantity
+    - title
+    - year
+    type: object
+  models.LoginAdmin:
+    properties:
+      password:
+        example: admin123!
+        type: string
+      username:
+        example: admin
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  models.LoginUser:
+    properties:
+      password:
+        example: Test123!
+        type: string
+      username:
+        example: test
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  models.RegisterAdmin:
+    properties:
+      email:
+        example: admin@test.com
+        type: string
+      password:
+        example: admin123!
+        type: string
+      username:
+        example: admin
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
+  models.RegisterUser:
+    properties:
+      email:
+        example: test@test.com
+        type: string
+      password:
+        example: Test123!
+        type: string
+      username:
+        example: test
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
+  models.UpdateBook:
+    properties:
+      author:
+        type: string
+      cover:
+        type: string
+      genre:
+        type: string
+      price:
+        type: integer
+      quantity:
+        type: integer
+      title:
+        type: string
+      year:
+        type: integer
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
@@ -8,20 +130,297 @@ info:
     email: support@swagger.io
     name: API Support
     url: http://www.swagger.io/support
-  description: This is a sample server celler server.
+  description: API for bookstore.
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
+  title: Bookstore API GO
   version: "1.0"
-paths: {}
+paths:
+  /:
+    get:
+      consumes:
+      - application/json
+      description: do ping
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: ping example
+      tags:
+      - example
+  /admin/login:
+    post:
+      consumes:
+      - application/json
+      description: Authenticates an admin using username and password, returns a JWT
+        token if successful
+      parameters:
+      - description: Admin login object
+        in: body
+        name: admin
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginAdmin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: JWT Token
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Authenticate an admin
+      tags:
+      - admin
+  /admin/register:
+    post:
+      consumes:
+      - application/json
+      description: Registers a new admin with the given username and password
+      parameters:
+      - description: Admin registration object
+        in: body
+        name: admin
+        required: true
+        schema:
+          $ref: '#/definitions/models.RegisterAdmin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully registered
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Register a new admin
+      tags:
+      - admin
+  /books:
+    get:
+      description: Get a list of all books with optional pagination
+      parameters:
+      - default: 0
+        description: Offset for pagination
+        in: query
+        name: offset
+        type: integer
+      - default: 10
+        description: Limit for pagination
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved list of books
+          schema:
+            items:
+              $ref: '#/definitions/models.Book'
+            type: array
+      summary: Get all books with pagination
+      tags:
+      - books
+    post:
+      consumes:
+      - application/json
+      description: Create a new book with the given input data
+      parameters:
+      - description: Create book object
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateBook'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Successfully created book
+          schema:
+            $ref: '#/definitions/models.Book'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+      security:
+      - JwtAuth: []
+      summary: Create a new book
+      tags:
+      - books
+  /books/{id}:
+    delete:
+      description: Delete the book with the given ID
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: Successfully deleted book
+          schema:
+            type: string
+        "404":
+          description: book not found
+          schema:
+            type: string
+      summary: Delete a book by ID
+      tags:
+      - books
+    get:
+      description: Get details of a book by its ID
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved book
+          schema:
+            $ref: '#/definitions/models.Book'
+        "404":
+          description: Book not found
+          schema:
+            type: string
+      summary: Find a book by ID
+      tags:
+      - books
+    put:
+      consumes:
+      - application/json
+      description: Update the book details for the given ID
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update book object
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateBook'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully updated book
+          schema:
+            $ref: '#/definitions/models.Book'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: book not found
+          schema:
+            type: string
+      summary: Update a book by ID
+      tags:
+      - books
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      description: Authenticates a user using username and password, returns a JWT
+        token if successful
+      parameters:
+      - description: User login object
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: JWT Token
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Authenticate a user
+      tags:
+      - user
+  /user/register:
+    post:
+      consumes:
+      - application/json
+      description: Registers a new user with the given username and password
+      parameters:
+      - description: User registration object
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.RegisterUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully registered
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Register a new user
+      tags:
+      - user
 securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: X-API-Key
-    type: apiKey
-  JwtAuth:
+  BearerAuth:
     in: header
     name: Authorization
     type: apiKey
